--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.364.0",
     "next": "14.1.4",
+    "next-themes": "^0.3.0",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-preset-env": "9.5.4",
     "react": "^18",
